@@ -14,8 +14,8 @@ export(infoContentMethod)
 export(wangMethod)
 exportClasses(DOParams)
 exportClasses(enrichResult)
+exportMethods("setReadable<-")
 exportMethods(plot)
-exportMethods(setReadable)
 exportMethods(show)
 exportMethods(sim)
 exportMethods(summary)
